Correctly align the social icons

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,7 +14,7 @@ a {
 }
 
 h1, h2, h3 {
-    margin: 0 0 1em 0;
+    margin: 0;
     padding: 0;
     font-weight: 700;
     font-size: 3em;
@@ -61,6 +61,10 @@ nav a:hover {
     width: 100%;
     padding: 0 20px;
     box-sizing: border-box;
+}
+
+.section .content .social a:not(:last-of-type) {
+    margin: 0 0 0 12px;
 }
 
 /* About Section */
